infra/k8s-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticketing
  labels:
    name: ticketing
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
    - host: ticketing.test
      http:
        paths:
          - pathType: Prefix
            path: "/api/users/?(.*)"
            backend:
              service:
                name: auth
                port:
                  number: 3000
          - pathType: Prefix
            path: "/api/tickets/?(.*)"
            backend:
              service:
                name: tickets
                port:
                  number: 3000
          - pathType: Prefix
            path: "/api/orders/?(.*)"
            backend:
              service:
                name: orders
                port:
                  number: 3000
          - pathType: Prefix
            path: "/api/payments/?(.*)"
            backend:
              service:
                name: payments
                port:
                  number: 3000
          - pathType: Prefix
            path: "/?(.*)"
            backend:
              service:
                name: client
                port:
                  number: 3000
